# Cpp-examples

./: .gitignore  readme.md
001 extern c/: CMakeLists.txt  c_module.c  c_module.h  cpp_main.cpp  cpp_module.h
001 extern c example/: ._CMakeLists.txt  ._c_module.h  cpp_module.cpp
002 gtest/: CMakeLists.txt  CMakeLists.txt.bak
002 gtest example/: CMakeLists.txt  CMakeLists.txt.bak
003 float double c/: CMakeLists.txt  main.cpp  max.c
003 float double c example/: max_source.c  my_statistics_double.h  my_statistics_float.h  templates_off.h  templates_on.h
004 endian/: main.cpp
004 endian example/: CMakeLists.txt
005 pack/: main.cpp
005 pack example/: CMakeLists.txt
006 python call c dll/: CMakeLists.txt  dll.py  math.c  math.h
007 dllexport/: CMakeLists.txt  math.h
008 malloc/: main.cpp
009 openmp/: CMakeLists.txt  main.cpp
010 singleton/: CMakeLists.txt  main.cpp
011 varargs/: CMakeLists.txt  main.cpp
012 server and client/: CMakeLists.txt  client.cpp  readme.md  server.cpp
013 swig/: CMakeLists.txt  mylibpy.i
013 swig/inc/mylib/: add.h  subtract.h
013 swig/src/mylib/: add.cpp  subtract.cpp
test/: test_opencv.cpp
